# aya-lab

./: README.md
kprobe-wake-up-new-task/ebpf/: Cargo.toml
kprobe-wake-up-new-task/ebpf/src/: bindings.rs  main.rs
kprobe-wake-up-new-task/user/src/: main.rs
kprobe-wake-up-new-task/xtask/: Cargo.toml
kprobe-wake-up-new-task/xtask/src/: build.rs  build_ebpf.rs  codegen.rs  run.rs
lima-vm/: aya-lab.yaml
raw-tracepoint-sched-process-exec/: Cargo.toml
raw-tracepoint-sched-process-exec/.cargo/: config.toml
raw-tracepoint-sched-process-exec/ebpf/: Cargo.toml
raw-tracepoint-sched-process-exec/ebpf/src/: bindings.rs  main.rs
raw-tracepoint-sched-process-exec/user/src/: main.rs
raw-tracepoint-sched-process-exec/xtask/src/: build_ebpf.rs
tail-calls/: README.md
tail-calls/ebpf/src/: main.rs  maps.rs  progs.rs  shared_state.rs
tail-calls/user/: Cargo.toml
tail-calls/user/src/: ebpf.rs  main.rs  maps.rs
tail-calls/xtask/src/: codegen.rs  main.rs
tgid-pid/ebpf/: Cargo.toml
tgid-pid/ebpf/src/: exec.rs  exit.rs  fork.rs  main.rs
tgid-pid/user/src/: main.rs
tgid-pid/xtask/src/: codegen.rs
tools/: Cargo.toml
tools/src/: multithread.rs  singlethread.rs
tracepoint-sched-process-exec-btf/: README.md
tracepoint-sched-process-exec-btf/ebpf/src/: bindings.rs  main.rs
tracepoint-sched-process-exec-btf/user/src/: main.rs
tracepoint-sched-process-exec-btf/xtask/src/: build_ebpf.rs  codegen.rs
tracepoint-sched-process-exec/common/src/: lib.rs
tracepoint-sched-process-exec/ebpf/: Cargo.toml
tracepoint-sched-process-exec/ebpf/src/: bindings.rs  (+1 more)
(+3 files in other folders)
